--- a/app/views/snpedia_articles/_form.html.haml
+++ b/app/views/snpedia_articles/_form.html.haml
@@ -16,7 +16,7 @@
     = f.label :xml
     = f.text_field :xml
   .field
-    = f.label :references
-    = f.text_field :references
+    = f.label :snp
+    = f.text_field :snp
   .actions
     = f.submit 'Save'
