--- a/app/views/snpedia_articles/show.html.haml
+++ b/app/views/snpedia_articles/show.html.haml
@@ -11,7 +11,7 @@
   = @snpedia_article.xml
 %p
   %b References:
-  = @snpedia_article.references
+  = @snpedia_article.snp.rs_number
 
 = link_to 'Edit', edit_snpedia_article_path(@snpedia_article)
 \|
