Formated variant effect links navigation links

--- a/app/views/variant_effects/index.html.haml
+++ b/app/views/variant_effects/index.html.haml
@@ -11,7 +11,8 @@
 
   - @variant_effects.each do |variant_effect|
     %tr
-      %td= variant_effect.snp
+      %td
+        = link_to variant_effect.snp, snp_path(variant_effect.snp)
       %td= variant_effect.variant
       %td= variant_effect.description
       %td= link_to 'Show', variant_effect
