Medicines + GWAS results

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -2,3 +2,9 @@
   =link_to 'SNPs', snps_path
 %li
   =link_to 'Variant effects', variant_effects_path
+%li
+  =link_to 'GWAS results', gwas_results_path
+%li
+  =link_to 'Medical conditions', medical_conditions_path
+%li
+  =link_to 'Medicines', medicines_path
